<resources>
    <string name="app_name">AeGis NAV</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">City Weather</string>
    <string name="action_logout">Sign Out</string>
    <string name="action_feedback">Send Feedback</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_placess">Places</string>
    <string name="nav_item_navigation">Navigation</string>
    <string name="nav_item_extras">History</string>
    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_placess</item>
        <item>@string/nav_item_navigation</item>
        <item>@string/nav_item_extras</item>
    </string-array>

    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_places</item>
        <item>@drawable/ic_navi</item>
        <item>@drawable/ic_extra</item>
    </array>

    <string name="title_navigation">Navigation</string>
    <string name="title_barcodes">QR/Barcode Scanner</string>
    <string name="title_home">Home</string>
    <string name="title_extras">History</string>
    <string name="title_places">Places</string>

    <string name="hello_world">Hello world!</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_notify_alert">Enable notifications</string>
    <string name="pref_description_notify_alert">Should an event happen, the application will display a notification
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">User</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>

    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>

    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="pref_frame_rate_list">
        <item>15 FPS</item>
        <item>30 FPS</item>
        <item>35 FPS</item>
        <item>40 FPS</item>
        <item>45 FPS</item>
        <item>50 FPS</item>
    </string-array>

    <string-array name="pref_frame_rate_values">
        <item>15</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <string name="pref_header_maps">Mapping Options</string>

    <string name="pref_header_others">Other Settings</string>

    <!-- End of Pref -->


    <string name="greeting">Hi: </string>
    <string name="action">Action</string>

    <!-- For Camera stuff -->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>

    <!-- Gsign-in -->
    <string name="title_text">AeGis Sign-In</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: The application has failed to sign-in."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="proceed_guest">Sign-in As Guest</string>
    <string name="proceed">Proceed To App</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!--Places-->
    <string name="autocomplete_hint">Enter place name or address</string>
    <string name="selected_place">Selected Place Details:</string>
    <string name="show_on_map">Open In Maps</string>

    <!-- getString(String, Object...) does not support HTML tags directly, they need to be encoded first.
    Original string: <b>%1$s</b><br/><i>Place_Abs Id: %2$s</i><br/>Address: %3$s<br/>Phone: %4$s<br/>Website: %5$s-->
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;GPS: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>
    <string name="intro_message">
        <![CDATA[


            AeGis Nav has intergrated google play services inorder to get the most out of our device, allowing you to search for places, scan barcodes, view indoor maps,
            with some customizations on the implementation to improve the user experience.


        ]]>
    </string>

    <!-- Weather part -->

    <string name="change_city">Change city</string>

    <!-- Put your own APP ID here -->
    <string name="open_weather_maps_app_id">e9b9987ad7fa2d42ee47be19ca082a4e</string>

    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>

    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>

    <string name="place_not_found">Sorry, no weather data found.</string>
    <string name="LocationMsg">Please allow our app to take you to location settings and please assure that they are enabled to get the best out of the app.</string>
    <string name="history">History</string>

</resources>
