<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="aegis.com.aegis.activity.SettingsActivity$GeneralPreferenceFragment"
        android:title="@string/pref_header_general"/>

    <header
        android:fragment="aegis.com.aegis.activity.SettingsActivity$NotificationPreferenceFragment"
        android:title="@string/pref_header_notifications"/>

    <header
        android:fragment="aegis.com.aegis.activity.SettingsActivity$DataSyncPreferenceFragment"
        android:title="@string/pref_header_data_sync"/>

    <header
        android:fragment="aegis.com.aegis.activity.SettingsActivity$MapPreferenceFragment"
        android:title="@string/pref_header_maps"/>

    <header
        android:fragment="aegis.com.aegis.activity.SettingsActivity$OthersPreferenceFragment"
        android:title="@string/pref_header_others"/>

</preference-headers>
